; ModuleID = '/home/carl/AnghaBench/linux/drivers/sbus/char/extr_oradax.c_dax_ccb_kill.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/sbus/char/extr_oradax.c_dax_ccb_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DAX_CCB_RETRIES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"attempting kill on ca_ra 0x%llx\00", align 1
@HV_EOK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [26 x i8] c"HV_EOK (ca_ra 0x%llx): %d\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"%s (ca_ra 0x%llx)\00", align 1
@EAGAIN = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [20 x i8] c"ccb_kill count = %d\00", align 1
@DAX_CCB_USEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @dax_ccb_kill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dax_ccb_kill(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %8, align 4
  store i32 0, i32* %7, align 4
  br label %10

10:                                               ; preds = %48, %2
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @DAX_CCB_RETRIES, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %51

14:                                               ; preds = %10
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = inttoptr i64 %16 to i8*
  %18 = call i32 (i8*, i8*, ...) @dax_dbg(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %17)
  %19 = load i32, i32* %4, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = call i64 @sun4v_ccb_kill(i32 %19, i32* %20)
  store i64 %21, i64* %6, align 8
  %22 = load i64, i64* %6, align 8
  %23 = load i64, i64* @HV_EOK, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %30

25:                                               ; preds = %14
  %26 = load i32, i32* %4, align 4
  %27 = load i32*, i32** %5, align 8
  %28 = load i32, i32* %27, align 4
  %29 = call i32 (i8*, i32, ...) @dax_info_dbg(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i32 %26, i32 %28)
  br label %36

30:                                               ; preds = %14
  %31 = load i64, i64* %6, align 8
  %32 = call i8* @dax_hv_errno(i64 %31, i32* %8)
  store i8* %32, i8** %9, align 8
  %33 = load i8*, i8** %9, align 8
  %34 = load i32, i32* %4, align 4
  %35 = call i32 (i8*, i8*, ...) @dax_dbg(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* %33, i32 %34)
  br label %36

36:                                               ; preds = %30, %25
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* @EAGAIN, align 4
  %39 = sub nsw i32 0, %38
  %40 = icmp ne i32 %37, %39
  br i1 %40, label %41, label %43

41:                                               ; preds = %36
  %42 = load i32, i32* %8, align 4
  store i32 %42, i32* %3, align 4
  br label %54

43:                                               ; preds = %36
  %44 = load i32, i32* %7, align 4
  %45 = call i32 (i8*, i32, ...) @dax_info_dbg(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i32 %44)
  %46 = load i32, i32* @DAX_CCB_USEC, align 4
  %47 = call i32 @udelay(i32 %46)
  br label %48

48:                                               ; preds = %43
  %49 = load i32, i32* %7, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %7, align 4
  br label %10

51:                                               ; preds = %10
  %52 = load i32, i32* @EAGAIN, align 4
  %53 = sub nsw i32 0, %52
  store i32 %53, i32* %3, align 4
  br label %54

54:                                               ; preds = %51, %41
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local i32 @dax_dbg(i8*, i8*, ...) #1

declare dso_local i64 @sun4v_ccb_kill(i32, i32*) #1

declare dso_local i32 @dax_info_dbg(i8*, i32, ...) #1

declare dso_local i8* @dax_hv_errno(i64, i32*) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
